@@ -1,4 +1,6 @@
-﻿using System;
+﻿using StardewModdingAPI;
+using StardewModdingAPI.Utilities;
+using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Text;
@@ -9,5 +11,7 @@ namespace RuneMagic.Source
     public sealed class ModConfig
     {
         public bool DevMode { get; set; } = false;
+        public SButton CastKey { get; set; } = SButton.R;
+        public SButton RunemasterKey { get; set; } = SButton.Q;
     }
 }
